[gd_scene load_steps=2 format=3 uid="uid://ctk3lywf0nx6p"]

[ext_resource type="Script" path="res://Camp_Bonfire/campui.gd" id="1_nmyl3"]

[node name="Camp_UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_nmyl3")

[node name="Content_Box" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.446
anchor_top = 0.431
anchor_right = 0.537
anchor_bottom = 0.627
offset_left = 0.208008
offset_top = -0.288025
offset_right = 0.375977
offset_bottom = -0.296021
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Menu" type="VBoxContainer" parent="Content_Box"]
layout_mode = 2
mouse_filter = 2

[node name="Rest_Button" type="Button" parent="Content_Box/Menu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 10
text = "Rest"

[node name="Spells_Button" type="Button" parent="Content_Box/Menu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 10
text = "Learn Spells"

[node name="Familiars_Button" type="Button" parent="Content_Box/Menu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 10
text = "Summon"

[node name="Potion_Brewing" type="Button" parent="Content_Box/Menu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 10
text = "Potion-Brewing"

[node name="Converse_Button" type="Button" parent="Content_Box/Menu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 10
text = "Converse with XXXX"

[connection signal="pressed" from="Content_Box/Menu/Converse_Button" to="." method="_on_converse"]
